# QR-Code-generator

cpp/: CMakeLists.txt  qrcodegen.cpp  qrcodegen.hpp
